# cis194

./: .gitignore  README.md  cis194.cabal
.stack-work/ghci/663e79eb/: cabal_macros.h
Homework1/: cis194.cabal
Homework1/src/: Homework1.hs  Main.hs
Homework10/: cis194.cabal
Homework10/src/: SExpr.hs
Homework11/src/: Main.hs  SExpr.hs
Homework12/: cis194.cabal  package.yaml
Homework12/src/: Main.hs  Risk.hs
Homework2/src/: LogAnalysis.hs  Main.hs
Homework3/src/: Golf.hs  Main.hs
Homework4/src/: Homework4.hs  Main.hs
Homework5/src/: Calc.hs  Main.hs
Homework6/src/: Main.hs
Homework7/: cis194.cabal  package.yaml
Homework7/src/: Fibonacci.hs  JoinList.hs  Scrabble.hs  StringBufEditor.hs
Homework8/: cis194.cabal
Homework8/src/: Main.hs  Party.hs
Homework9/: cis194.cabal  package.yaml
Homework9/src/: AParser.hs  Main.hs
src/: Homework4.hs  Main.hs
src/Homework1/: homework1.hs
src/Homework2/: LogAnalysis.hs
src/Homework3/: Golf.hs
src/Homework5/: Calc.hs
src/Homework6/: Fibonacci.hs
