name:                cis194
version:             0.1.0.0
homepage:            https://github.com/golergka/cis194#readme
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable cis194
  hs-source-dirs:      ., src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers
